--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,13 @@ kotlin.code.style=official
 kotlin.daemon.jvmargs=-Xmx3072M
 
 #Gradle
-org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
+#org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
 org.gradle.configuration-cache=true
 org.gradle.caching=true
 
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+
+# gradle.properties im Projekt oder User-Gradle-Verzeichnis
+org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 -Djava.io.tmpdir=C:/Users/domen/AppData/Local/Temp
