--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ coroutinesVersion = "1.10.2"
 sqlDelight = "2.1.0"
 
 #Common
-agp = "8.11.2"
+agp = "8.13.0"
 android-compileSdk = "36"
 android-minSdk = "24"
 android-targetSdk = "36"
@@ -19,7 +19,7 @@ composeMultiplatform = "1.9.1"
 junit = "4.13.2"
 kotlin = "2.2.20"
 kotlinx-coroutines = "1.10.2"
-ktor = "3.3.0" # Standartmässig integriert
+ktor = "3.3.0"
 logback = "1.5.18"
 
 #Datetime
