--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -1,27 +1,22 @@
-name: iOS Build
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-
 jobs:
   ios:
     runs-on: macos-latest
 
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set up JDK
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
 
       - name: Install CocoaPods
         run: sudo gem install cocoapods
+
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
 
       - name: Build iOS Framework
         run: ./gradlew iosArm64Binaries iosSimulatorArm64Binaries
