--- a/iosApp/exportOptions.plist
+++ b/iosApp/exportOptions.plist
@@ -9,7 +9,11 @@
     <string>manual</string>
     <key>compileBitcode</key>
     <false/>
-    <key>destination</key>
-    <string>export</string>
+    <key>uploadBitcode</key>
+    <false/>
+    <key>stripSwiftSymbols</key>
+    <true/>
+    <key>teamID</key>
+    <string></string>
 </dict>
 </plist>
